--- a/Style.css
+++ b/Style.css
@@ -44,10 +44,11 @@ body {
 
 #Introtext {
     color: #fff;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 #Draak {
-    width: 400px;
+    width: 600px;
     height: 500px;
     float: right;
     margin: 0px, 0px, 0px, 100px;
@@ -61,6 +62,16 @@ body {
     margin: 100px, 0px, 0px, 0px;
     padding: 10px;
 }
-#mainContainer{
+
+#mainContainer {
     display: block;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+#goat {
+    width: 400px;
+    height: 500px;
+    float: right;
+    margin: 0px, 0px, 0px, 100px;
+    padding: 10px;
 }
